<resources>
    <string name="app_name">PETRA</string>
    <string name="email_field_text">Netfang</string>
    <string name="password_field_text">Lykilorð</string>
    <string name="login_button">Innskrá</string>
    <string name="register_button">Nýskrá</string>
    <string name="dcw_button">Stillingar</string>
    <string name="exp_card_list_item">Starfsreynsla</string>
    <string name="card_list_item_phone">Sími</string>
    <string name="card_list_item_email">Netfang</string>
    <string name="card_list_item_address">Heimilisfang</string>
    <string name="login_activity_title_text">Innskráning</string>
    <string name="auth0_client_id">ox325QZVYQitbySZYq0CZOW5vJLs9r4Q</string>
    <string name="auth0_domain">dev-xzuj3qsd.eu.auth0.com</string>
    <string name="auth0_client_secret">V8i8Xrr0epjcSaOvf1A2vy8mycbwS30MlHlmeMj3R71J4jYTepaq64k7rL5my1sY</string>
    <string name="child_card_list_item_ssn">Kennitala</string>
    <string name="child_card_list_item_name">Nafn</string>
    <string name="sleep_from">Svefn frá</string>
    <string name="sleep_To">Svefn til</string>
    <string name="appetite">Matarlyst</string>
    <string name="report_comment">Athugasemd</string>
    <string name="report_create">Skrá skýrslu</string>
    <string name="logout_button">Útskrá</string>
    <string name="hello_user">Halló, User!</string>
    <string name="search_button_text">Leita</string>
    <string name="greeting_message">Hæ %1$s %2$s!</string>
    <string name="preference_file_key">settings</string>
    <string name="card_list_item_location">Staður</string>
    <string name="search_bar_hint">Leitaðu eftir póstnúmeri</string>
    <string name="icon_location_search">leita nálægt mér</string>
    <string name="create_child">Bæta við barn</string>
    <string name="foreldri">Foreldri</string>
    <string name="plus">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="application_welcome_text">Hæ %1$s, þú ert að fara að sækja um pláss hjá %2$s</string>
    <string name="application_instruction_text">Veldu barn:</string>
    <string name="nytt_barn_title">Búa til Barn</string>
    <string name="kt">Kennitala</string>
    <string name="nafn">Nafn</string>
    <string name="eftirnafn">Eftirnafn</string>
    <string name="cancel_button">Hætta við</string>
    <string name="create_child_error">Fylla verður í alla reiti!</string>
    <string name="apply_btn_text">Sækja um</string>
    <string name="free_spots">laus pláss</string>
    <string name="get_day_report_parent">Sjá skýrslur</string>
    <string name="title_activity_view_day_report">ViewDayReportActivity</string>
    <string name="register_parent_title">Nýskráning foreldris</string>
    <string name="register_dcw_title">Nýskráning dagforeldris</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="reports_empty_string">Engar skýrslur um þetta barn</string>
    <string name="dagforeldri">Dagforeldri</string>
    <string name="foreldri_str">Foreldri</string>
    <string name="see_parent_button">Foreldri</string>
    <string name="create_report_button">Búa til skýrslu</string>
    <string name="baby_icon">Baby Icon</string>
    <string name="title_placeholder">Titill</string>
    <string name="tilkynna_veikindi">Tilkynna veikindi</string>
    <string name="no_children_message">Engin börn skráð!</string>
    <string name="no_children_message_dcw">Engin börn í þinni umsjá!</string>

</resources>