<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ný skýrsla"
        android:textSize="24dp"
        android:textStyle="bold"
        android:paddingBottom="5pt"
        />

    <TextView
        android:id="@+id/child_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24dp"
        android:textStyle="bold"
        android:paddingBottom="20pt"
        />

    <EditText
        android:id="@+id/report_sleep_from"
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:hint="@string/sleep_from"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <EditText
        android:id="@+id/report_sleep_to"
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:hint="@string/sleep_To"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <Spinner
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:id="@+id/report_appetite"
        android:hint="@string/appetite"
        android:spinnerMode="dropdown"
        android:prompt="@string/search_button_text"
        />

    <EditText
        android:id="@+id/report_comment"
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:hint="@string/report_comment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20pt"
        android:paddingTop="10pt"
        android:baselineAligned="false">

        <Button
            android:id="@+id/report_register"
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:text="@string/report_create" />

    </LinearLayout>

</LinearLayout>