<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_child"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_gravity="center">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cancel_button"
        android:src="@drawable/baseline_close_24"
        app:tint="#787878" />

    <TextView
        android:id="@+id/nytt_barn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingBottom="5pt"
        android:text="@string/nytt_barn_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ssn"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nytt_barn_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/kt" />

    <EditText
        android:id="@+id/childsFirstName"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssn"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/nafn" />

    <EditText
        android:id="@+id/childsLastName"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childsFirstName"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/eftirnafn" />

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childsLastName"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark">

    </TextView>

    <Button
        android:id="@+id/createChildButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/childsLastName"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/nytt_barn_title" />

</RelativeLayout>
