<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Innskráning"
        android:textSize="24dp"
        android:textStyle="bold"
        android:paddingBottom="70pt"
        />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:hint="@string/email_field_text"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_field_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20pt"
        android:paddingTop="10pt"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/login_button"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:text="@string/login_button"></Button>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/register_button"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:text="@string/register_button"></Button>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>