<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include layout="@layout/custom_action_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nýskráning dagforeldris"
            android:textSize="24dp"
            android:textStyle="bold"
            android:paddingBottom="20pt"
            />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="Fornafn" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="Eftirnafn" />

        <EditText
            android:id="@+id/ssn"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="Kennitala"
            />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_field_text"
            />

        <EditText
            android:id="@+id/mobile_field"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="Símanúmer"
            />

        <AutoCompleteTextView
            android:id="@+id/location"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="Póstnúmer og staður" />

        <EditText
            android:id="@+id/address"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="Heimilisfang"
            />

        <EditText
            android:id="@+id/experience"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Starfsreynsla í árum"
            />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/password_field_text"
            />


        <Button
            android:id="@+id/register_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/register_button" />
    </LinearLayout>
</LinearLayout>