<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/borderColor"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/child_card_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/mood_kid"
                        android:scaleType="centerCrop"
                        android:contentDescription="Baby Icon"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Titill"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />


                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/child_card_list_item_name"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/child_card_list_name_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textAppearance="?attr/textAppearanceBody2"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/child_card_list_item_ssn"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/child_card_list_ssn_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/child_card_notify_sickness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Tilkynna veikindi"
                    style="?attr/borderlessButtonStyle"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/child_card_get_reports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/get_day_report_parent"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>